# godefarig

./: .gitignore  CMakeLists.txt  Doxyfile  GPATH  GRTAGS  GTAGS  README.md  build_external_project.cmake  clean  cppcheck_sources.bash  cppcheckout  full_gprof  full_valgrind  licence_header  remake
glfw-3.2.1/: cmake_install.cmake  cmake_uninstall.cmake
glfw-3.2.1/src/: Makefile  cmake_install.cmake
include/: bitmask.hpp  camera.h  color_heatmap.hpp  comparison_component.h  containerOverload.h  container_overload.h  controllers.h  debug.h  definitions.h  delta_time.h  display.h  drawable.h  fractahedron.h  gfg_utils.h  gfg_utils.h.bak  glToggle.h  glfw_interaction.h  input_enums.h  input_manager.h  iterators.hpp  make_unique_cpp11.h  mesh_generation.h  meta_utils.hpp  myglad.h  node.h  node.h.bak  observer.h  pointer_horror.hpp  shader.h  slice.h  slice.h.bak  transformatrix.h  type_name.hpp  uniform.h
include/geometry/: hexagonal_iterator.h
include/glm/: CTestTestfile.cmake  Makefile  cmake_install.cmake
include/graphics/: buffer.h  drawable.h  shader.h  shading_unit.h  transformations.h  transformatrix.h  uniform.h  vbo.h  vbo.h~
include/input/: comparison_component.h  controllers.h  glfw_interaction.h  input_manager.h  observer.h
include/terrain/: hexagonal_iteration.h
include/utils/: assertion_exception.h
res/: big_random_islands.gfg  hot_spot.gfg  lachance.gfg  lightingShader.fs  lightingShader.vs  low_res_example.gfg  manyhavens.gfg  nice.gfg  nice_seed.gfg  planet_shader.fs  planet_shader.vs  planet_shader_phong.fs  planet_shader_phong.vs  poet_was_here.gfg  random.gfg  scattered_islands.gfg  sea_of_squares.gfg  slight_overshoot.gfg  the_cressent.gfg  the_fallen_world.gfg
src/: camera.cpp  combinaisons.cpp  comparison_component.cpp  container_overload.cpp  controllers.cpp  delta_time.cpp  display.cpp  drawable.cpp  fractahedron.cpp  fractahedron.cpp.bak  gfg_utils.cpp  gfg_utils.cpp.bak  gl_toggle.cpp  glfw_interaction.cpp  gltest.cpp  input_manager.cpp  mesh_generation.cpp  mesh_generation.cpp.bak  node.cpp  shader.cpp  slice.cpp  slice.cpp.bak  slicetest.cpp  terrain_test.cpp  transformatrix.cpp  uniform.cpp
src/geometry/: hexagonal_iterator.cpp
src/graphics/: buffer.cpp  drawable.cpp  drawable.cpp.bak  shader.cpp  shading_unit.cpp  transformations.cpp  transformatrix.cpp  uniform.cpp
src/input/: controllers.cpp  glfw_interaction.cpp  input_manager.cpp
src/terrain/: hexagonal_iteration.cpp
src/utils/: assertion_exception.cpp
tests/: BoostTestHelpers.cmake  CMakeLists.txt  clean  input_test.cpp
